fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ ul.social p {
 }
 .row h1 {
   font-size: 12px;
-  margin-top: 200px
+  margin-top: 20px
 }
 .btn {
      background-color: #352719;
